# opencode-sdk-rs

./: .rumdl.toml  .typos.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  context7.json  package-lock.json  package.json
.github/workflows/: release.yml
crates/opencode-sdk-rs/: Cargo.toml
crates/opencode-sdk-rs/examples/: basic.rs
crates/opencode-sdk-rs/src/: client.rs  config.rs  error.rs  lib.rs  streaming.rs  types.rs
crates/opencode-sdk-rs/src/resources/: app.rs  config.rs  event.rs  file.rs  find.rs  mod.rs  session.rs  shared.rs  tui.rs
crates/opencode-sdk-rs/tests/: integration.rs  prism.rs
scripts/: prism-test.sh
specs/opencode-sdk-rust/: design.md  tasks.md
specs/prism-openapi-validation/: design.md  tasks.md
